--- a/src/tagger/index.html
+++ b/src/tagger/index.html
@@ -24,6 +24,7 @@
                 margin: 0px 5px;
             }
             #app img {
+                width: 100%;
                 max-width: 900px;
             }
             #app .buttons .btn {
